test/corpus/constants.txt
================
Number constant
================

value = 10

---

(source_file
  (definition
    identifier: (identifier)
    value: (number)))

===================
Multiple constants
===================

first = 1
second = 2

---

(source_file
  (definition
    identifier: (identifier)
    value: (number))
  (definition
    identifier: (identifier)
    value: (number)))
