test/corpus/definitions.txt
================
Number constant
================

value = 10

---

(source_file
  (constant
    identifier: (identifier)
    value: (number)))

===================
Multiple constants
===================

first = 1
second = 2

---

(source_file
  (constant
    identifier: (identifier)
    value: (number))
  (constant
    identifier: (identifier)
    value: (number)))

====================
Function definition
====================

first a b = a

---

(source_file
  (function
    identifier: (identifier)
    parameters: (identifier)
    parameters: (identifier)
    body: (identifier)))
